# classification_robot

./: CMakeLists.txt  main.cpp  preprocess.cpp  preprocess.h  testKnn.cpp
classification-robot/include/: robot_6.h
classification-robot/src/: main.cpp  robot_6.cpp
knn/: CMakeLists.txt  knn.cpp  knn.h
preprocess/: CMakeLists.txt  preprocess.cpp  preprocess.h
